--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -2890,8 +2890,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Will try to imporve accuracy by something\n",
-        "Think for random forest and PCA"
+        "Implementing Random Forest"
       ],
       "metadata": {
         "id": "qEje1_nEq4XQ"
